Added test for axis transform

--- a/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
@@ -81,6 +81,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Create parameter array\n",
+    "* Number of bins, ranges for histograms\n",
+    "* Marker size\n",
+    "* Legend position\n",
+    "* Y axis transform\n",
+    "  * options: identity, sqrt, log(x+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameterArray = [\n",
+    "    {\"name\":\"transformY\", \"options\": [None, \"sqrt\", \"lambda x: log(x+1)\"], \"value\":None}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#  create figure layout and histogram aray\n",
     "* tooltips\n",
     "  * what will be shown on the mouse over\n",
@@ -88,7 +111,7 @@
     "  * variables to bokeh is interpreted as string @is adress operator \n",
     "    * it is possible to get fuction on client but has to be intgrate in wrappers \n",
     "* Widget params:\n",
-    "  * [type, params]\n",
+    "  * \\[type, params\\]\n",
     "      * range\n",
     "      * slider\n",
     "      * select\n",
@@ -101,16 +124,19 @@
     "     * link to the git - possible options\n",
     "  * in bokeh widgtets can not be reused\n",
     "  \n",
-    "* hitoArray\n",
+    "* histoArray\n",
     "   * array of histogram description\n",
     "   * convention as in histogramdd in numpy\n",
     "      * name \n",
     "      * varaibles\n",
     "      * nbins - sclar in array\n",
-    "      * ranges [max,min] 0 in case not specified minimum maximum of data points for current selection  used\n",
-    "      * qunatiles, sum_range, axis\n",
-    "         * parameters of agreagation function\n",
+    "      * ranges \\[max,min\\] 0 in case not specified minimum maximum of data points for current selection  used\n",
     "      * weights: can be a column of the data frame, another histogram or a cut or paramterized cut variation (see customJsColumns.ipynb for examples)\n",
+    "      * histograms: dictionary of any other histograms to include\n",
+    "      * cumulative: whether the histogram should be cumulative - so far only works for 1D histograms\n",
+    "      * density: whether the histogram should be rescaled so that the integral is 1 - so far only implemented for 1D histograms\n",
+    "      * quantiles, sum_range, axis\n",
+    "         * parameters of agreagation function\n",
     "   * columns in created histograms\n",
     "      * 1D histogram:\n",
     "          * bin_bottom, bin_center, bin_top - bin edges and centers\n",
@@ -124,8 +150,7 @@
     "          * mean - the (weighted) mean value of the i-th axis in the bin\n",
     "          * std - the (weighted) mean value of the i-th axis in the bin\n",
     "          * quantile_i - the i-th quantile specified in the quantiles list in histoArray\n",
-    "          * sum_i, sum_normed_i - the i-th (normed) range sum in the sum_range list in histoArray\n",
-    "          "
+    "          * sum_i, sum_normed_i - the i-th (normed) range sum in the sum_range list in histoArray\n"
    ]
   },
   {
@@ -142,8 +167,13 @@
     "    ['range', ['C'], {'type': 'minmax'}],\n",
     "    ['range', ['D'], {'type': 'sigma', 'bins': 10, 'sigma': 3}],\n",
     "    ['multiSelect',[\"BoolB\"]],\n",
+    "    ['select', ['transformY'], {\"name\": \"transformY\"}]\n",
     "]\n",
-    "widgetLayoutDesc=[[0, 1, 2], [3, 4], {'sizing_mode': 'scale_width'}]"
+    "widgetLayoutDesc={\n",
+    "    \"selection\":[[0, 1, 2], [3, 4], {'sizing_mode': 'scale_width'}],\n",
+    "    \"visualization\":[[\"transformY\"]]\n",
+    "}\n",
+    "\n"
    ]
   },
   {
@@ -151,9 +181,9 @@
    "metadata": {},
    "source": [
     "# Simple drawing without table and with original data superimposed\n",
-    "* A, B and C from uniform distribution\n",
-    "* histograms of A, B\n",
-    "* histogram of (A+B)/2 with weights A*C"
+    "* `A`, `B` and `C` from uniform distribution\n",
+    "* histograms of `A`, `B`\n",
+    "* histogram of `(A+B)/2` with weights `A*C`"
    ]
   },
   {
@@ -171,10 +201,11 @@
     "    ]\n",
     "    figureArray = [\n",
     "        #   ['A'], ['C-A'], {\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\", \"filter\": \"A<0.5\"}],\n",
-    "        [['A'], ['histoA', '(A*A-C*C)*100'], {\"size\": 2, \"colorZvar\": \"A\", \"errY\": \"errY\", \"errX\": \"0.01\"}],\n",
+    "        [['bin_center', 'A'], ['bin_count', '(A*A-C*C)*100'], {\"size\": 2, \"colorZvar\": [None, \"A\"], \"errY\": [None, \"errY\"], \"errX\": \"0.01\", \"source\":[\"histoA\", None]}],\n",
     "        [['(A+B)/2'], ['histoTransform', '(C+A)*200', '(C-A)*200']],\n",
     "        [['B'], ['histoB', '(C+B)*10', '(C-B)*10'], {\"size\": 7, \"colorZvar\": \"C\", \"errY\": \"errY\",\n",
-    "                                                    \"rescaleColorMapper\": True}]\n",
+    "                                                    \"rescaleColorMapper\": True}],\n",
+    "        {\"y_transform\":\"transformY\"}\n",
     "    ]\n",
     "    figureLayoutDesc=[\n",
     "        [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
@@ -182,7 +213,7 @@
     "    ]\n",
     "    \n",
     "    xxx=bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
-    "                              widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", nPointRender=3000, histogramArray=histoArray)\n",
+    "                              widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", nPointRender=3000, histogramArray=histoArray, parameterArray=parameterArray)\n",
     "testBokehClientHistogram()"
    ]
   },
@@ -210,7 +241,8 @@
     "        [['A'], ['histoA']],\n",
     "        [['B'], ['histoB'], {\"show_histogram_error\": True}],\n",
     "        [['(A+B)/2'], ['histoTransform'], {\"yAxisTitle\": \"sum A*C\"}],\n",
-    "        [\"tableHisto\", {\"rowwise\": True}]\n",
+    "        [\"tableHisto\", {\"rowwise\": True}],\n",
+    "        {\"y_transform\":\"transformY\"}\n",
     "    ]\n",
     "    figureLayoutDesc=[\n",
     "        [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
@@ -218,7 +250,7 @@
     "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2}\n",
     "    ]\n",
     "    xxx = bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
-    "                                widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", histogramArray=histoArray)\n",
+    "                                widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", histogramArray=histoArray, parameterArray=parameterArray)\n",
     "testBokehClientHistogramRowwiseTable()"
    ]
   },
@@ -250,11 +282,12 @@
     "        {\"name\": \"histoAB\", \"variables\": [\"A\", \"(A+B)/2\"], \"nbins\": [20, 20], \"axis\": [0, 1], \"quantiles\": [.1, .5, .9]}\n",
     "    ]\n",
     "    figureArray = [\n",
-    "        [['histoAB_1.bin_center_0'], ['histoAB_1.quantile_0', 'histoAB_1.quantile_1', 'histoAB_1.quantile_2']],\n",
-    "        [['histoAB_1.bin_center_0'], ['histoAB_1.quantile_1', 'histoAB_1.mean']],\n",
-    "        [['A'], ['histoAB'], {\"yAxisTitle\": \"(A+B)/2\"}],\n",
-    "        [['histoAB_1.bin_center_0'], ['histoAB_1.std']],\n",
-    "        [\"tableHisto\", {\"rowwise\": False}]\n",
+    "        [['bin_center_0'], ['quantile_0', 'quantile_1', 'quantile_2'], {\"source\":\"histoAB_1\"}],\n",
+    "        [['bin_center_0'], ['quantile_1', 'mean'], {\"source\":\"histoAB_1\"}],\n",
+    "        [[('bin_bottom_0','bin_top_0')], [('bin_bottom_1','bin_top_1')], {\"source\":\"histoAB\", \"colorZvar\":\"bin_count\"}],\n",
+    "        [['bin_center_0'], ['std'], {\"source\":\"histoAB_1\"}],\n",
+    "        [\"tableHisto\", {\"rowwise\": False}],\n",
+    "        {\"y_transform\":\"transformY\"}\n",
     "    ]\n",
     "    figureLayoutDesc=[\n",
     "        [0, 1,  {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 200}],\n",
@@ -263,7 +296,7 @@
     "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2, \"size\": 5}\n",
     "    ]\n",
     "    xxx = bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
-    "                                widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", histogramArray=histoArray)\n",
+    "                                widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", histogramArray=histoArray, parameterArray=parameterArray)\n",
     "testBokehClientHistogramProfileA()"
    ]
   },
@@ -290,9 +323,10 @@
     "    figureArray = [\n",
     "        [['quantile_0', 'quantile_1', 'quantile_2'], ['bin_center_1'], {\"source\": \"histoAB_0\"}],\n",
     "        [['quantile_1', 'mean'], ['bin_center_1'], {\"source\": \"histoAB_0\"}],\n",
-    "        [['A'], ['histoAB'], {\"yAxisTitle\": \"(A+B)/2\"}],\n",
+    "        [[('bin_bottom_0','bin_top_0')], [('bin_bottom_1','bin_top_1')], {\"source\":\"histoAB\", \"colorZvar\":\"bin_count\", \"yAxisTitle\": \"(A+B)/2\"}],\n",
     "        [['std'], ['bin_center_1'], {\"source\": \"histoAB_0\"}],\n",
-    "        [\"tableHisto\", {\"rowwise\": False}]\n",
+    "        [\"tableHisto\", {\"rowwise\": False}],\n",
+    "        {\"y_transform\":\"transformY\"}\n",
     "    ]\n",
     "    figureLayoutDesc=[\n",
     "        [0, 1,  {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 200}],\n",
@@ -301,7 +335,7 @@
     "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2, \"size\": 5}\n",
     "    ]\n",
     "    xxx = bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
-    "                                widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", histogramArray=histoArray)\n",
+    "                                widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", histogramArray=histoArray, parameterArray=parameterArray)\n",
     "testBokehClientHistogramProfileB()"
    ]
   },
@@ -329,7 +363,7 @@
     "        [['bin_center_1'], ['mean']],\n",
     "        [['bin_center_1'], ['sum_0']],\n",
     "        [['bin_center_1'], ['std']],\n",
-    "        {\"source\": \"histoABC_0\", \"colorZvar\": \"bin_center_2\", \"size\": 7}\n",
+    "        {\"source\": \"histoABC_0\", \"colorZvar\": \"bin_center_2\", \"size\": 7, \"y_transform\":\"transformY\"}\n",
     "    ]\n",
     "    figureLayoutDesc=[\n",
     "        [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
@@ -337,21 +371,14 @@
     "    ]\n",
     "    \n",
     "    xxx=bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
-    "                              widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", nPointRender=3000, histogramArray=histoArray)\n",
+    "                              widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", nPointRender=3000, histogramArray=histoArray, parameterArray=parameterArray)\n",
     "testBokehClientHistogram3d()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -365,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
