Added test for custom text input function

--- a/RootInteractive/tutorial/bokehDraw/customJsColumns.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/customJsColumns.ipynb
@@ -83,7 +83,8 @@
     "    {\"name\": \"legendFontSize\", \"value\":\"13px\", \"options\":[\"9px\", \"11px\", \"13px\", \"15px\"]},\n",
     "    # Parameters for custom JS columns\n",
     "    {\"name\": \"paramX\", \"value\":10, \"range\": [-20, 20]},\n",
-    "    {\"name\": \"C_cut\", \"value\": 1, \"range\": [0, 1]}\n",
+    "    {\"name\": \"C_cut\", \"value\": 1, \"range\": [0, 1]},\n",
+    "    {\"name\": \"CustomFunc\", \"value\":\"return Math.sin(A*paramX)+C\"}\n",
     "]\n",
     "widgetParams=[\n",
     "    ['range', ['A']],\n",
@@ -93,17 +94,18 @@
     "    ['range', ['D'], {'type': 'sigma', 'bins': 10, 'sigma': 3}],\n",
     "    ['range', ['E'], {'type': 'sigmaMed', 'bins': 10, 'sigma': 3}],\n",
     "    #['slider','F', ['@min()','@max()','@med','@min()','@median()+3*#tlm()']], # to be implmneted\n",
-    "    ['select',[\"colorZ\"], {\"callback\": \"parameter\", \"default\": 0}],\n",
-    "    ['slider',[\"size\"], {\"callback\": \"parameter\"}],\n",
-    "    ['select',[\"legendFontSize\"], {\"callback\": \"parameter\", \"default\": 2}],\n",
-    "    ['slider',[\"C_cut\"], {\"callback\": \"parameter\"}],\n",
-    "    ['slider',[\"paramX\"], {\"callback\": \"parameter\"}],\n",
+    "    ['select',[\"colorZ\"], {\"default\": 0}],\n",
+    "    ['slider',[\"size\"]],\n",
+    "    ['select',[\"legendFontSize\"], {\"default\": 2}],\n",
+    "    ['slider',[\"C_cut\"]],\n",
+    "    ['slider',[\"paramX\"]],\n",
+    "    ['text', [\"CustomFunc\"]]\n",
     "]\n",
     "\n",
     "widgetLayoutDesc={\n",
     "    \"Selection\": [[0, 1, 2], [3, 4], {'sizing_mode': 'scale_width'}],\n",
     "    \"Graphics\": [[5, 6, 7], {'sizing_mode': 'scale_width'}],\n",
-    "    \"CustomJS functions\": [[8, 9]]\n",
+    "    \"CustomJS functions\": [[8, 9, 10]]\n",
     "    }"
    ]
   },
@@ -157,6 +159,7 @@
     "    {\n",
     "        \"name\": \"custom_column\",\n",
     "        \"variables\": [\"A\", \"B\", \"C\", \"A_mul_paramX_plus_B\"],\n",
+    "        \"parameters\": [\"paramX\"],\n",
     "        \"func\": \"CustomFunc\"\n",
     "    }\n",
     "]"
@@ -210,7 +213,7 @@
    "source": [
     "figureArray = [\n",
     "    # Directly draw the column\n",
-    "    [['A'], ['B', '4*A+B', 'A_mul_paramX_plus_B']],\n",
+    "    [['A'], ['B', '4*A+B', 'A_mul_paramX_plus_B', 'custom_column']],\n",
     "    # Multiple weights columns can be specified in the same histogram CDS using the new histograms parameter\n",
     "    [['bin_center'], ['bin_count', 'entries_C_cut'], {\"source\":\"histoA\"}],\n",
     "    # Custom JS functions can be used on histograms to transform the computed histogram values\n",
