#285 - updating notebook documentation for compression

--- a/RootInteractive/tutorial/bokehDraw/compression.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/compression.ipynb
@@ -5,7 +5,67 @@
    "id": "f4412757",
    "metadata": {},
    "source": [
-    "# Lossy compression"
+    "# Lossy compression\n",
+    "\n",
+    "Lossy and lossles compression is very important feature i the RootInteractive.\n",
+    "\n",
+    "Depending on the layout of the data, a different compression factor can be achieved. Huge reduction factors can be achieved, partly due to **the entropy of the data** (e.g. Gaussian distribution), partly due to the **repetitions in the case of flattened arrays.**\n",
+    "\n",
+    "For example, in the real use case of dEdx simulation (clusters per track), the common track properties are very well compressed, the charge properties also have a small entry factor. Normally, the factor **O(10-20)- 5-10% is reached** - depending on the repetition and the entropy of input data.\n",
+    "\n",
+    "\n",
+    "In the code below you can find how to parametrize lossy ans lossless comprsssion of the data.\n",
+    "\n",
+    "Example use case for Q vectors along the track:\n",
+    "\n",
+    "```\n",
+    "compressCDSPipe\n",
+    "Compresses 1 dNprimdx .* [('relative', 16), 'code', 'zip']\n",
+    "Compression factor 1502730 33602297 0.04472104987346549 1 dNprimdx\n",
+    "Compress 2 qVector .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 3637456 27522312 0.13216389669588804 2 qVector\n",
+    "Compress 3 region .* [('relative', 16), 'code', 'zip']\n",
+    "Compression factor 579220 27522277 0.02104549707133607 3 region\n",
+    "Compress 4 qMean .* [('relative', 16), 'code', 'zip']\n",
+    "Compress factor 1485573 33602294 0.04421046372607775 4 qMean\n",
+    "Compress 5 nTotVector .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 3336317 27522315 0.1212222518345568 5 nTotVector\n",
+    "Compress 6 nPrimMean .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 1502830 33602298 0.04472402452951283 6 nPrimMean\n",
+    "Compress 7 qStd .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 1474259 33602293 0.04387376182928945 7 qStd\n",
+    "Compress 8 nTotStd .* [('relative', 16), 'code', 'zip']\n",
+    "Compress factor 1488320 33602296 0.044292211460788274 8 nTotStd\n",
+    "Compress 9 nTotMean .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 1499257 33602297 0.04461769384396549 9 nTotMean\n",
+    "Compress 10 TransGEM .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 1461148 33602297 0.04348357494727221 10 TransGEM\n",
+    "Compress 11 nPrimStd .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 1487282 33602297 0.044261319397301914 11 nPrimStd\n",
+    "Compress 12 padLength .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 595667 27522314 0.021643056612172945 12 padLength\n",
+    "Compress 13 nPrimVector .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 2779472 27522316 0.10098975682133728 13 nPrimVector\n",
+    "Compress 14 lognPrimStd .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 1485884 33602300 0.0442197111507248 14 lognPrimStd\n",
+    "Compress 15 SatOn .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 150691 22962324 0.006562532607762176 15 SatOn\n",
+    "Compress 16 nSecSatur .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 1725854 33602298 0.05136118964244648 16 nSecSatur\n",
+    "Compress 17 logqStd .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 1470552 33602296 0.04376343806982713 17 logqStd\n",
+    "Compress 18 lognTotStd .* [('relative', 16), 'code', 'zip']\n",
+    "Compress Factor 1484058 33602299 0.04416537094679147 18 lognTotStd\n",
+    "Compress 19 lognSecSatur .* [('relative', 16), 'code', 'zip']\n",
+    "Compress factor 1474271 33602301 0.043874108502271914 19 lognSecSatur\n",
+    "Compress 20 region.factor() .* [('relative', 16), 'code', 'zip']\n",
+    "Compress factor 553452 6080146 0.09102610364948473 20 region.factor()\n",
+    "Compress 21 SatOn.factor() .* [('relative', 16), 'code', 'zip']\n",
+    "Compress factor 197180 6080146 0.03243014230250392 21 SatOn.factor()\n",
+    "Compress _all 31371473 609564013 0.051465428291285954 21\n",
+    "\n",
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -49,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "npoints = 100000\n",
+    "npoints = 1000000\n",
     "A = np.random.randn(npoints)\n",
     "B = np.random.randn(npoints)\n",
     "unifC = np.random.random_sample(npoints)\n",
@@ -176,12 +236,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29bd95d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file(\"test_nocompression.html\")\n",
+    "bokehDrawSA.fromArray(df, None, figureArray, widgetParams, layout=layout,\n",
+    "                            widgetLayout=widgetLayoutDesc, nPointRender=\"nPointRender\", parameterArray=parameterArray, useNotebook=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8ee0dfb2",
    "metadata": {},
    "source": [
     "## Option \"code\" in compressArray\n",
-    "* Results in suboptimal compression in most cases as can be seen here"
+    "* to be optimized  in some cases it improve in some cases not - to be fixed in next release"
    ]
   },
   {
@@ -194,7 +266,7 @@
     "arrayCompression = [\n",
     "    (\"unif.*\", [(\"delta\", .01), \"code\", \"zip\"]),\n",
     "    (\"bool.*\", [\"zip\"]),\n",
-    "    (\".*\", [(\"relative\", 16), \"zip\"]),\n",
+    "    (\".*\", [(\"relative\", 16), \"code\",\"zip\"]),\n",
     "]\n",
     "output_file(\"test_compression_code.html\")\n",
     "bokehDrawSA.fromArray(df, None, figureArray, widgetParams, layout=layout,\n",
@@ -202,12 +274,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46a74c29",
+   "cell_type": "markdown",
+   "id": "2622a5db",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## IN this particular case factor 34 % compression accheved\n",
+    "```\n",
+    "-rw-r--r-- 1 miranov alice 27494089 Dec  6 20:19 test_compression.html\n",
+    "-rw-r--r-- 1 miranov alice 80092088 Dec  6 20:19 test_nocompression.html\n",
+    "-rw-r--r-- 1 miranov alice 27494247 Dec  6 20:19 test_compression_code.html\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
@@ -234,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
